--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "mapbox-gl": "^2.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
@@ -42,5 +43,28 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "map": {
+    "name": "use-mapbox-gl-js-with-react",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+      "mapbox-gl": "^2.9.2"
+    },
+    "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build"
+    },
+    "eslintConfig": {
+      "extends": [
+        "react-app"
+      ]
+    },
+    "browserslist": [
+      "defaults",
+      "not ie 11"
+    ],
+    "author": "Mapbox",
+    "license": "MIT"
   }
 }
