Edit form styling done

--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,19 @@
     "node": "16.x"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.15.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.98",
     "@mui/material": "^5.10.1",
+    "@mui/x-date-pickers": "^5.0.1",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.29.2",
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.1",
     "mapbox-gl": "^2.10.0",
     "react": "^17.0.2",
